Corrected navbar scroll spacing bugs

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,17 +1,15 @@
-/* Center thubnails */
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+  .body {
+    padding-top: 56px;
+  }
 }
 
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-    }
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+  .body {
+    padding-top: 0px;
+  }
 }
 
 /* Keep pointer with JS scrolling links */
@@ -23,4 +21,9 @@
   border-radius: 50%;
   width: 2em;
   height: 2em; 
+}
+
+.navsection {
+  width: 12em;
+  max-width: 12em;
 }
